[gd_scene load_steps=3 format=2]

[ext_resource path="res://world/puzzles/noise_canceling/NoiseCanceling.gd" type="Script" id=1]
[ext_resource path="res://world/puzzles/noise_canceling/Waveform.tscn" type="PackedScene" id=2]

[node name="NoiseCanceling" type="Node2D"]
script = ExtResource( 1 )

[node name="Noise" parent="." instance=ExtResource( 2 )]
position = Vector2( 71.5096, 87.8879 )

[node name="Pattern1" parent="." instance=ExtResource( 2 )]
position = Vector2( 72.372, 196.658 )

[node name="Pattern2" parent="." instance=ExtResource( 2 )]
position = Vector2( 77.109, 310.165 )

[node name="Pattern3" parent="." instance=ExtResource( 2 )]
position = Vector2( 77.539, 421.948 )

[node name="Result" parent="." instance=ExtResource( 2 )]
position = Vector2( 82.2759, 539.122 )
